[package]
name = "web_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "checker"
path = "src/checker/mod.rs"
test = false
doctest = false

[[test]]
name = "test_parsed_url"
path = "tests/test_parsed_url.rs"


[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"
bytes = "1.3.0"
httparse = "1.8.0"
